Fixed bugs relating to whitespace

--- a/billsplitter.css
+++ b/billsplitter.css
@@ -39,3 +39,7 @@ body {
 .totals {
     margin-top: 4%;
 }
+
+.tip {
+    margin-top: 10%;
+}
